# tourney-lawyer

./: .markdownlint.json  MANIFEST.in  Makefile  README.md  setup.cfg
.github/workflows/: static.yml
tests/: conftests.py
tourney_lawyer/: __init__.py
