[metadata]
name = tourney-lawyer
version = 0.0.dev0
author = mcuchet
author_email = martin.cuchet@gmail.com
url = http://github.com/Spigushe/tourney-lawyer
description="Discord bot to manage tournaments using Challonge",
long_description = file: README.md
long_description_content_type = text/markdown
license = "MIT"
keywords = discord bot mtg tournament tournaments tourney challonge
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    Natural Language :: English
    Operating System :: OS Independent
    Environment :: Plugins
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.9
    Topic :: Games/Entertainment

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    setuptools
install_requires =
    discord
    setuptools
    unidecode

[options.extras_require]
dev =
    black
    doc8
    flake8
    ipython
    pytest
    python-dotenv
    pychallonge
    zest.releaser[recommended]

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    lawyer = tourney_lawyer:main

[flake8]
max-line-length = 88
exclude = build, dist
ignore = E203, W503

[bdist_wheel]
python-tag = py3

[distutils]
index-servers = pypi

[tool:pytest]
# discord uses aiohttp, which still uses the coroutine decorator
filterwarnings =
    ignore:.*"@coroutine" decorator is deprecated.*:DeprecationWarning

[zest.releaser]
create-wheel = yes
